Crash on Cycles render preview playing & stopping animation when using Quick Smoke #82027

Closed
opened 2020-10-24 14:08:08 +02:00 by Berk Elyesa Yıldırım · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.5058

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-23 11:34, hash: e4728d0a16
Worked: 2.83 LTS

Short description of error
Blender crash on cycles render preview mode when changing frame, or playing and stopping animation with volume objects.

Exact steps for others to reproduce the error
#82027.blend

  • Open file
  • Bake smoke domain
  • Switch to rendered shading
  • Play and stop a few times

Bug in 2.92A
#82027.mp4

.
Working in 2.83 LTS
#82027-283LTS.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.5058 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-23 11:34, hash: `e4728d0a16` Worked: 2.83 LTS **Short description of error** Blender crash on cycles render preview mode when changing frame, or playing and stopping animation with volume objects. **Exact steps for others to reproduce the error** [#82027.blend](https://archive.blender.org/developer/F9068714/T82027.blend) - Open file - Bake smoke domain - Switch to rendered shading - Play and stop a few times **Bug in 2.92A** [#82027.mp4](https://archive.blender.org/developer/F9068739/T82027.mp4) . **Working in 2.83 LTS** [#82027-283LTS.mp4](https://archive.blender.org/developer/F9068721/T82027-283LTS.mp4)

Added subscriber: @Beryesa

Added subscriber: @Beryesa

#81718 was marked as duplicate of this issue

#81718 was marked as duplicate of this issue
Member

Added subscribers: @brecht, @EAW

Added subscribers: @brecht, @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed.

blender.exe         :0x00007FF7F7E6ECE0  ccl::BVH::pack_primitives C:\blender-git\blender\intern\cycles\bvh\bvh.cpp:306
blender.exe         :0x00007FF7F7E6F1F0  ccl::BVH::refit C:\blender-git\blender\intern\cycles\bvh\bvh.cpp:188
blender.exe         :0x00007FF7F4E0AF50  ccl::Geometry::compute_bvh C:\blender-git\blender\intern\cycles\render\geometry.cpp:203
blender.exe         :0x00007FF7F4E0A990  std::_Func_impl_no_alloc<std::_Binder<std::_Unforced,void (__cdecl ccl::Geometry::*)(ccl::Device *, C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\functional:904
blender.exe         :0x00007FF7F6EA0060  tbb::internal::function_task<std::function<void __cdecl(void)> >::execute C:\blender-git\lib\win64_vc15\tbb\include\tbb\task.h:1049
tbb.dll             :0x00007FF9584E37A0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FF9584E37A0  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF7F3E8DAC0  tbb::internal::task_group_base::wait C:\blender-git\lib\win64_vc15\tbb\include\tbb\task_group.h:168
blender.exe         :0x00007FF7F6EA0410  ccl::TaskPool::wait_work C:\blender-git\blender\intern\cycles\util\util_task.cpp:46
blender.exe         :0x00007FF7F4E0BF40  ccl::GeometryManager::device_update C:\blender-git\blender\intern\cycles\render\geometry.cpp:1432
blender.exe         :0x00007FF7F4D8D300  ccl::Scene::device_update C:\blender-git\blender\intern\cycles\render\scene.cpp:266
blender.exe         :0x00007FF7F4D8FDD0  ccl::Scene::update C:\blender-git\blender\intern\cycles\render\scene.cpp:500
blender.exe         :0x00007FF7F4DA7390  ccl::Session::update_scene C:\blender-git\blender\intern\cycles\render\session.cpp:943
blender.exe         :0x00007FF7F4DA58F0  ccl::Session::run_cpu C:\blender-git\blender\intern\cycles\render\session.cpp:701
blender.exe         :0x00007FF7F4DA54B0  ccl::Session::run C:\blender-git\blender\intern\cycles\render\session.cpp:776
blender.exe         :0x00007FF7F6EA2C60  ccl::thread::run C:\blender-git\blender\intern\cycles\util\util_thread.cpp:53
blender.exe         :0x00007FF7F463D0C0  std::thread::_Invoke<std::tuple<void (__cdecl ceres::internal::ThreadPool::*)(void),ceres::internal C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\thread:44
ucrtbase.dll        :0x00007FF980CC0F70  beginthreadex
KERNEL32.DLL        :0x00007FF982127C10  BaseThreadInitThunk
ntdll.dll           :0x00007FF98470CE80  RtlUserThreadStart

{F9100733}


Tested using:
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-26 13:34, hash: rB9d24d1b20cc8, which includes {ae5fd92228f8}

@brecht, I am going to test to see if {D9340} fixes the crash.

Confirmed. ```Stack trace: blender.exe :0x00007FF7F7E6ECE0 ccl::BVH::pack_primitives C:\blender-git\blender\intern\cycles\bvh\bvh.cpp:306 blender.exe :0x00007FF7F7E6F1F0 ccl::BVH::refit C:\blender-git\blender\intern\cycles\bvh\bvh.cpp:188 blender.exe :0x00007FF7F4E0AF50 ccl::Geometry::compute_bvh C:\blender-git\blender\intern\cycles\render\geometry.cpp:203 blender.exe :0x00007FF7F4E0A990 std::_Func_impl_no_alloc<std::_Binder<std::_Unforced,void (__cdecl ccl::Geometry::*)(ccl::Device *, C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\functional:904 blender.exe :0x00007FF7F6EA0060 tbb::internal::function_task<std::function<void __cdecl(void)> >::execute C:\blender-git\lib\win64_vc15\tbb\include\tbb\task.h:1049 tbb.dll :0x00007FF9584E37A0 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FF9584E37A0 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF7F3E8DAC0 tbb::internal::task_group_base::wait C:\blender-git\lib\win64_vc15\tbb\include\tbb\task_group.h:168 blender.exe :0x00007FF7F6EA0410 ccl::TaskPool::wait_work C:\blender-git\blender\intern\cycles\util\util_task.cpp:46 blender.exe :0x00007FF7F4E0BF40 ccl::GeometryManager::device_update C:\blender-git\blender\intern\cycles\render\geometry.cpp:1432 blender.exe :0x00007FF7F4D8D300 ccl::Scene::device_update C:\blender-git\blender\intern\cycles\render\scene.cpp:266 blender.exe :0x00007FF7F4D8FDD0 ccl::Scene::update C:\blender-git\blender\intern\cycles\render\scene.cpp:500 blender.exe :0x00007FF7F4DA7390 ccl::Session::update_scene C:\blender-git\blender\intern\cycles\render\session.cpp:943 blender.exe :0x00007FF7F4DA58F0 ccl::Session::run_cpu C:\blender-git\blender\intern\cycles\render\session.cpp:701 blender.exe :0x00007FF7F4DA54B0 ccl::Session::run C:\blender-git\blender\intern\cycles\render\session.cpp:776 blender.exe :0x00007FF7F6EA2C60 ccl::thread::run C:\blender-git\blender\intern\cycles\util\util_thread.cpp:53 blender.exe :0x00007FF7F463D0C0 std::thread::_Invoke<std::tuple<void (__cdecl ceres::internal::ThreadPool::*)(void),ceres::internal C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.27.29110\include\thread:44 ucrtbase.dll :0x00007FF980CC0F70 beginthreadex KERNEL32.DLL :0x00007FF982127C10 BaseThreadInitThunk ntdll.dll :0x00007FF98470CE80 RtlUserThreadStart ``` {F9100733} --- **Tested using:** **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-10-26 13:34, hash: rB9d24d1b20cc8, which includes {ae5fd92228f8} @brecht, I am going to test to see if {D9340} fixes the crash.
Member

Added subscriber: @manzanilla

Added subscriber: @manzanilla
Member
@brecht & @manzanilla [D9340: Fix #81893: Blender crashes when using Gas Fluid Domain in Cycles](https://archive.blender.org/developer/D9340) Fixes the crashing.

Added subscriber: @zeauro

Added subscriber: @zeauro

Can we have a general skip playback rendering strategy to avoid those crashes about heavy stuff to render on machines that are not build to do it ?
We could have a black screen with a warning : "too heavy render to allow playback" and just render frame when playback is stopped.

Anyways, playback in Solid mode is more satisfying to have an idea of how smoke animation looks like.

That case is so far from a real practice. Just because it is a crash, it has an higher priority than other real issues.

Can we have a general skip playback rendering strategy to avoid those crashes about heavy stuff to render on machines that are not build to do it ? We could have a black screen with a warning : "too heavy render to allow playback" and just render frame when playback is stopped. Anyways, playback in Solid mode is more satisfying to have an idea of how smoke animation looks like. That case is so far from a real practice. Just because it is a crash, it has an higher priority than other real issues.
Member

Added subscribers: @SteffenD, @mano-wii

Added subscribers: @SteffenD, @mano-wii
Member

Added subscriber: @iss

Added subscriber: @iss
Member

On second thought, while both of these reports produce the same stack trace for me, and both are fixed by the one line change diff D9340 applied on top of current master, I will again separate them (as @iss asked to be done in #82016 (Crash on Cycles render preview when using Volume objects)) for easier testing. This report involves a mesh object domain created by quick smoke, and in my testing it can sometimes take starting and stopping the playback several times before it crashes. #81718 (Volume Object crash on frame change) involves a volume object that crashes for me on a single frame change.

Sorry about the noise.

@zeauro from your comment I take it that you have tested this report's file and it didn't crash for you. What are your system specs? So far (although I could be wrong) these reports only involve Intel CPUs and NVIDIA GPU cards. I wonder if AMD CPUs for example aren't affected. If you could, please also test #81718 and report your findings there as well.

On second thought, while both of these reports produce the same stack trace for me, and both are fixed by the one line change diff [D9340](https://archive.blender.org/developer/D9340) applied on top of current master, I will again separate them (as @iss asked to be done in #82016 (Crash on Cycles render preview when using Volume objects)) for easier testing. This report involves a mesh object domain created by quick smoke, and in my testing it can sometimes take starting and stopping the playback several times before it crashes. #81718 (Volume Object crash on frame change) involves a volume object that crashes for me on a single frame change. Sorry about the noise. @zeauro from your comment I take it that you have tested this report's file and it didn't crash for you. What are your system specs? So far (although I could be wrong) these reports only involve Intel CPUs and NVIDIA GPU cards. I wonder if AMD CPUs for example aren't affected. If you could, please also test #81718 and report your findings there as well.
Evan Wilson changed title from Crash on Cycles render preview playing&stopping animation when using Volume objects to Crash on Cycles render preview playing & stopping animation when using Quick Smoke 2020-10-27 17:11:07 +01:00

This issue was referenced by 8b806c86e1

This issue was referenced by 8b806c86e12e92ffc8b486a69ce4de5938f09b4a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-10-30 17:37:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82027
No description provided.