Fix T82027, T81718: Cycles crash with volume animation playback