intern/cycles/render/volume.cpp
@@ -583,6 +583,7 @@ void GeometryManager::create_volume_mesh(Volume *volume, Progress &progress)
   volume->clear();
   volume->reserve_mesh(vertices.size(), indices.size() / 3);
   volume->used_shaders.push_back(volume_shader);
+  volume->need_update = true;
   volume->need_update_rebuild = true;
 
   for (size_t i = 0; i < vertices.size(); ++i) {
